--- a/src/components/MyStory.astro
+++ b/src/components/MyStory.astro
@@ -4,7 +4,7 @@
 <section id="mystory" class="px-4 py-12 mx-auto">
 <h2 class="text-4xl text-center">My Story</h2>
 <h3 class="text-2xl text-center text-slate-800 mt-8 mb-4">1990's - How IT All Began</h3>
-<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-sm">
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-gamepad text-5xl w-16 text-slate-600"></i><span>Played video games on a Commodore 64.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-typewriter text-5xl w-16 text-slate-600"></i><span>Completed homework assignments on an Amiga 2000.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-wrench text-5xl w-16 text-slate-600"></i><span>Spent weekends repairing desktops for family and friends.</span></li>
@@ -12,7 +12,7 @@
 </ul>
 
 <h3 class="text-2xl text-center text-slate-800 mt-20 mb-4">2000's - Professional Development</h3>
-<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-sm">
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-graduation-cap text-5xl w-16 text-slate-600"></i><span>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-map-marker-alt text-5xl w-16 text-slate-600"></i><span>Moved to Halifax, Nova Scotia as a junior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-desktop text-5xl w-16 text-slate-600"></i><span>Promoted to senior consultant and team lead at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</span></li>
@@ -20,7 +20,7 @@
 </ul>
 
 <h3 class="text-2xl text-center text-slate-800 mt-20 mb-4">2010's - Embracing Adulthood</h3>
-<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-sm">
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-rings-wedding text-5xl w-16 text-slate-600"></i><span>Got married to my wife, Enerlise.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-house text-5xl w-16 text-slate-600"></i><span>We bought our first house.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-child text-5xl w-16 text-slate-600"></i><span>Became a first time father...</span></li>
@@ -29,7 +29,7 @@
 
 
 <h3 class="text-2xl text-center text-slate-800 mt-20 mb-4">2020's - Still Going Strong</h3>
-<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+<ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-sm">
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-repeat text-5xl w-16 text-slate-600"></i><span>Moved to the Securities Lending support team.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fal fa-house-user text-5xl w-16 text-slate-600"></i><span>Spent a lot of time working from home due to COVID-19.</span></li>
 <li class="flex flex-row gap-4 items-center"><i class="fa-brands fa-react text-5xl w-16 text-slate-600"></i><span>Learning React. Created a simple <a href="https://gifts.baisley.dev">web app</a>.</span></li>
