--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -60,14 +60,14 @@
             });
 
             if (response.status === 200) {
-                document.getElementById("contact-form-status").innerText = "Message sent successfully!";
+                document.getElementById("contact-form-status").innerText = await response.text();
                 document.getElementById("contact-form-status")?.classList.add("mt-8","p-4","rounded-xl","border","border-green-500","bg-green-900","text-green-400");
             } else {
-                document.getElementById("contact-form-status").innerText = "Failed to send message.";
+                document.getElementById("contact-form-status").innerText = await response.text();
                 document.getElementById("contact-form-status")?.classList.add("mt-8","p-4","rounded-xl","border","border-red-500","bg-red-900","text-red-400");
             }
         } catch (error) {
-            document.getElementById("contact-form-status").innerText = "An error occurred.";
+            document.getElementById("contact-form-status").innerText = "An error occurred sending message. Please try later.";
             document.getElementById("contact-form-status")?.classList.add("mt-8","p-4","rounded-xl","border","border-red-500","bg-red-900","text-red-400");
         } finally {
             document.getElementById("submit").disabled = false;
