--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,14 +16,9 @@ import '../styles/main.css';
     <meta charset=“utf-8”> 
     <link rel="canonical" href="https://brettbaisley.com/" />
 
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
     <script async src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
-    <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "180b55edc86d40dcb2ac9d87d30d7843"}'></script>
-    <!-- End Cloudflare Web Analytics -->
   </head>
   
 <body class="md:text-xl"></body>
