Azure Email Migration

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -54,7 +54,7 @@
     }
 
     async function submitForm() {
-        const targetAPI = '/api/email';
+        const targetAPI = '/api/sendEmail';
         
         var formData = new URLSearchParams();
         if (formName && formEmail && formMessage) {
