GenAI blog linked

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,7 +4,7 @@
 <section id="experience" class="px-4 py-12 mx-auto max-w-5xl">
     <h2 class="text-4xl text-center">Experience</h2>
     <ul class="mt-8">
-        <li><strong>2024 GenAI Hackathon Winner:</strong> Built an AI chatbot that leverages Retrieval-Augmented Generation to extract resolution steps from internal documention and embeds the steps into PagerDuty alerts, driving down MTTR. We won both the People's Choice award and the CIO Challenge.</li>
+        <li><strong>2024 GenAI Hackathon Winner:</strong> Built an AI chatbot that leverages Retrieval-Augmented Generation to extract resolution steps from internal documention and embeds the steps into PagerDuty alerts, driving down MTTR. We won the People's Choice award thanks to votes from our peers.</li>
         <li class="mt-4"><strong>Automation:</strong> Reduced manual effort by 30% with Python automation, streamlined processes, and prioritized bug fixes with dev teams.</li>
         <li class="mt-4"><strong>Incident Reduction:</strong> Cut incident ticket volume by 33% YOY through proactive issue identification and resolution.</li>
         <li class="mt-4"><strong>Presentation Skills:</strong> Delivered monthly updates to senior management and dev leads.</li>
