--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,11 +10,13 @@ import Skills from '../components/Skills.astro'
 import Aside from '../components/Aside.astro'
 import MyStory from '../components/MyStory.astro'
 import Footer from '../components/Footer.astro'
+import Hackathon from '../components/Hackathon.astro'
 ---
 
 <BaseLayout>
     <Header />
     <Hero />
+    <Hackathon />
     <Feature />
     <CareerHighlights />
     <Experience />
