--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import Contact from './Contact.astro'
 ---
 
-<footer class="px-4 py-12 bg-gray-900 text-gray-200 flex flex-col-reverse lg:flex-row gap-8 items-center justify-between">
+<footer class="px-4 py-12 bg-gray-900 text-gray-200 flex flex-col-reverse md:flex-row gap-8 items-center justify-between">
     <div class="">
       <h3 class="text-4xl text-center">Navigation</h3>
       <ul class="mt-8">
