--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 ---
 
 <section class="my-20 text-center">
-    <h2 class="m-15">Site Reliability Engineer</h2>
+    <h2 class="m-15">Software Production Management & Reliability Engineering Manager</h2>
     <h1 class="text-7xl tracking-tight">Hello, I'm&nbsp;Brett.</h1>
     <p class="mt-15 text-2xl text-slate-600">Turning Tech Headaches into High-Fives, One Script at a Time.</p>
     <div class="mt-15 ">
