--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -28,7 +28,10 @@ const skills_tech = [
     'Autosys',
     'ServiceNow',
     'OpenAI',
-    'Ansible'
+    'Ansible',
+    'Automation',
+    'Microsoft 365',
+    'Microsoft Copilot'
 ]
 
 const skills_soft = [
